Se agrego la parte de AFND a autómatas y se areglaron algunos errores

--- a/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
+++ b/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
@@ -126,3 +126,66 @@ Existen dos métodos de simplificación:
 
 >[!note] Mas Ejemplos
 >Todos los ejemplos gráficos estan en las notas de las clases o en la filminas
+
+---
+
+# Autómatas Finitos no Deterministas
+
+Se los define como una quíntupla ***A = (Q, Σ, δ, q0 , F)***, en donde:
+
+- **Q** es un conjunto finito no vacío de estados.
+- **Σ** es el conjunto finito de símbolos de entrada. 
+- **δ: Q x (Σ U {ε}) -> P(Q)** es la función de transición.
+- **q0** ∈ Q el estado inicial.
+- **F** ⊂ Q es el conjunto de estados finales
+
+Al igual que los autómatas finitos deterministas, los no deterministas se pueden representar a través de grafos o de tablas de estados. A diferencias de los deterministas, los automatas finitos no deterministas poseen una particularidad que es la ***relación lambda***.
+
+>[!important] Relación Lambda
+>Dado dos estados *p* y *q* de un AFN, están relacionados mediante una relación lambda si la transición a otro estado no consume ningún carácter de entrada, es decir, hace una transición a otro estado sin la necesidad de recibir una entrada.
+>- **Clausura transitiva de la relación lambda**: dado un conjunto de estados { *p, q, r* } si ***(p, q)*** poseen una relación lambda, y además ***(q, r)*** a su vez poseen una relación lambda, entonces ***(q, r)*** también poseen una relación lambda.
+>- **Clausura transitiva y reflexiva de la relación**: Posee todos los elementos de la clausura transitiva de la relación, agregando al grupo las transiciones lambda que posee cada estado consigo mismo, es decir, (p y p) o (q y q).
+
+#### Función de Transición sobre Palabras
+
+- Dada una función de transición no determinista, ***δ:QxΣ -> P(Q)***. La función de transición sobre palabras, se define así: ***𝛿(𝑞, 𝑥)*** como el conjunto de estados al que llega el autómata, tras procesar x, partiendo del estado *q*.
+- Dada una función de transición no determinista: ***δ: Q x (Σ U {ʎ}) -> P(Q)***. La función de transición sobre palabras, se define como el conjunto de estados al que llega el autómata desde un estado concreto, tras procesar una cadena de símbolos de entrada.
+
+>[!info] Lenguajes Aceptados por un AFN
+>Decimos que un AFN reconoce o acepta una palabra si:
+>1. Se consumen todos los símbolos de entrada.
+>2. Si al terminar la palabra, se llega al estado final.
+>
+>El lenguaje aceptado por un AFN, es el conjunto de palabrasaceptadas por él.
+
+>[!note] Aspectos de diseño del AFNs
+>Al retirar algunas restricciones que tienen los AFD, su diseño para un lenguaje dado puede volverse más simple, a su vez existe si, una dificultad, que radica en lo difícil que es llegar a saber qué camino tomar.
+>Existen dos modelos modulares de diseño de ***autómatas finitos no deterministas***:
+>- **AFN para la unión de Lenguajes**: Dado dos lenguajes L1 y L2, para lograr concatenar estos dos lenguajes únicamente se tiene que agregar un estado más que tenga una transición hacia los estados iniciales de cada autómata mediante una relación lambda.
+>
+><span class="centerImg"> ![[ALF-union-lenguajes.png]] </span>
+>
+>- **AFN para la concatenación de Lenguajes**: Dado dos lenguajes L1 y L2, para lograr una concatenación de lenguajes lo que se debe hacer es de los estado finales de un autómata, se crean transiciones vacías (relación lambda) entre los estados finales del primer autómata hacia el estado inicial del segundo autómata. Convirtiendose cada uno de los estado finales del primer autómata en estados no fonales.
+>
+><span class="centerImg"> ![[ALF-concatenacion-lenguajes.png]] </span>
+
+#### Equivalencia AFN y AFD
+
+Informalmente, un AFN es una extensión de un AFD que permiten ciertas transiciones prohibidas para éstos:
+- A partir de un estado concreto, no es preciso que el autómata tenga prevista alguna transición a otro estado (o al mismo) en respuesta a todos los símbolos de entrada posibles.
+- A partir de un estado concreto, y ante un símbolo de entrada, se permite que autómata transite a más de un estado distinto.
+- No es obligatorio consumir un símbolo de entrada para que el autómata cambie estado.
+
+Para todo AFN N, existe un AFD D tal que L(N) = L(D).
+- Se puede construir un AFD equivalente a un AFN dado. Utilizando el método que se basa en considerar el ***conjunto de estados*** en los que podría encontrarse el AFN al haber consumido una cierta entrada.
+
+<span class="centerImg"> ![[ALF-equivalencia1.png]] </span>
+
+Se hace algo parecido al teorema de Moore para demostrar que dos automatas son equivalentes. Con la diferencia que en este caso se van construyendo nuevos grupos de estados y se para una vez que no se forme ningún grupo nuevo. 
+Los estados van a ser finales, y en el conjunto de estados hay al menos un estado final.
+
+- Se puede construir un AFN equivalente a un AFD dado. Utilizando las transiciones ε.
+
+<span class="centerImg"> ![[ALF-equivalencia2.png]] </span>
+
+Se diseña un AFD para cada palabra que se quiera aceptar. Se combinan todos los AFD en un AFN que reconozca el lenguaje completo, donde los antiguos estados iniciales dejan de serlo, se crea un nuevo estado inicial, se añaden transiciones ***ε*** desde el nuevo estado inicial a los antiguos estados iniciales.
