Se agrego lo hablado en la clase de LP del dia 26-04-23

--- a/Lenguajes de Programación/Unidad 2/1. Sintaxis.md
+++ b/Lenguajes de Programación/Unidad 2/1. Sintaxis.md
@@ -1,5 +1,3 @@
-
-
 ## Concepto de Sintaxis
 
 Partiendo de la base de que un lenguaje de programación es un conjunto de notaciones que no permiten describir computaciones (sentencias) entendibles tanto para la máquina como para el ser humano. La sintaxis en estos lenguajes vendría a representar las reglas tanto láxicas como sintácticas que van a definir si una sentencia es válida para dicho lenguaje, es decir, como se escriben los enunciados, declaraciones y otras construcciones de lenguaje, describe la serie de símbolos que constituyen programas válidos. La semántica de un lenguaje de programación es el significado que se da a las diversas construcciones sintácticas.
@@ -19,7 +17,7 @@ Partiendo de la base de que un lenguaje de programación es un conjunto de notac
 
 El propósito primordial de la sintaxis es proveer una notación para la comunicación entre programador y el procesador de lenguajes de programación. Sin embargo, la elección de estructuras sintácticas particulares está restringida solo ligeramente por la necesidad de comunicar elementos particulares de información. Los detalles de sintaxis se eligen en gran medida con base en criterios secundarios, como la legibilidad, los cuales no tienen relación con el objetivo primario de comunicar información al procesador de lenguajes. Existen muchos criterios secundarios, pero se pueden clasificar en forma aproximada bajo los objetivos generales de hacer que los programas sean fáciles de leer, fáciles de escribir, fáciles de traducir y no ambiguos. Consideraremos a continuación algunas de las formas de designar estructuras sintácticas de lenguajes para satisfacer estos objetivos a menudo conflictivos.
 
-- **Legibilidad**: Las diferencias sintácticas deben reflejar diferencias semánticas subyacentes. Un programa es legible si la estructura subyacente del algoritmo y los datos que el programa representa quedan de manifiesto al inspeccionar el texto del programa. Se suele decir que un programa legible es autodocumentado (no necesita documentación). La legibilidad no se puede garantizar mediante el diseño de un lenguaje, porque incluso el mejor diseño se puede entrampar por una programación deficiente. 
+- **Legibilidad**: Las diferencias sintácticas deben reflejar diferentes semánticas subyacentes. Un programa es legible si la estructura subyacente del algoritmo y los datos que el programa representa quedan de manifiesto al inspeccionar el texto del programa. Se suele decir que un programa legible es autodocumentado (no necesita documentación). La legibilidad no se puede garantizar mediante el diseño de un lenguaje, porque incluso el mejor diseño se puede entrampar por una programación deficiente. 
 
 >[!note] Nota
 >En general, cuanto mayor es la variedad de construcciones sintácticas empleadas, resulta más fácil hacer que la estructura del programa refleje estructuras semánticas subyacentes distintas.
@@ -34,7 +32,7 @@ El propósito primordial de la sintaxis es proveer una notación para la comunic
 >Casi todas las reglas por omisión para el significado de construcciones de lenguaje buscan reducir la redundancia eliminando la expresión de significados que se pueden inferir del contexto. Por ejemplo, en vez de requerir la declaración explícita del tipo de cada variable simple, ***FORTRAN*** suministra una convención de nomenclatura que declara implícitamente que las variables cuyos nombres comienzan con una de las letras I-N son de tipo entero y todas las demás variables son de tipo real.
 
 >[!important] Características que Favorecen la Legibilidad y la Facilidad de Escritura
->El uso de enunciados estructurados, formatos simples de enunciados naturales, símbolos mnemotécnicos de operaciones e identificadores no restringidos facilita por lo común la escritura de programas al permitir que la estructura natural de los algoritmos y datos del problema se represente directamente en el programa. 
+>El uso de enunciados estructurados, formatos simples de enunciados naturales, símbolos mnemotécnicos de operaciones e identificadores no restringidos facilita por lo común la escritura de programas al permitir una estructura más natural para los algoritmos y datos del problema se represente directamente en el programa. 
 
 - **Facilidad de Verificación**: Entender un enunciado es fácil, crear programas correctos es difícil. Si bien entender cada enunciado de lenguaje de programación es relativamente fácil, el proceso global de crear programas correctos es un extremo difícil. Por consiguiente, se necesitan técnicas que permitan probar que el programa es matemáticamente correcto.
 - **Facilidad de Traducción**: Legibilidad y facilidad de escritura son criterios dirigidos a las necesidades del programador humano. La facilidad de traducción se relaciona con las necesidades del traductor que procesa el programa escrito. La clave para una traducción fácil es la regularidad de la estructura.  Por ejemplo, la sintaxis de LISP proporciona un ejemplo de una estructura de programa que no es particularmente legible ni especialmente fácil de escribir, pero que resulta en extremo fácil de traducir. La estructura sintáctica completa de cualquier programa en LISP se puede describir en unas cuantas reglas sencillas a causa de la regularidad de la sintaxis.
@@ -42,7 +40,7 @@ El propósito primordial de la sintaxis es proveer una notación para la comunic
 >[!important] Regularidad vs Legibilidad
 >La traducción de los programas se dificulta conforme aumenta el número de construcciones sintácticas especiales. Por ejemplo, la traducción de COBOL se hace muy difícil a causa del gran número de formas de enunciados y declaraciones que se permiten, no obstante que la semántica del lenguaje no es complicada de manera expresa.
 
-- **Carencia de Ambigüedad**: Idealmente, un solo significado para cada construcción sintáctica que se puede escribir. La ambigüedad es un problema medular en todo diseño de lenguaje. Una definición de lenguaje proporciona idealmente un significado único para cada construcción sintáctica que el programador puede escribir. Una construcción ambigua permite dos o más interpretaciones distintas. El problema de ambigüedad surge por lo común no en la estructura de elementos individuales de programa, sino en la interacción entre diferentes estructuras.
+- **Carencia de Ambigüedad**: Idealmente, un solo significado para cada construcción sintáctica que se puede escribir. Una construcción ambigua permite dos o más interpretaciones distintas. La ambigüedad es un problema medular en todo diseño de lenguaje. El problema de ambigüedad surge por lo común no en la estructura de elementos individuales de programa, sino en la interacción entre diferentes estructuras.
 
 >[!example] Ejemplo de Ambigüedad
 >Tanto PASCAL como ALGOL permiten dos formas distintas de enunciado condicional:
@@ -78,7 +76,7 @@ El propósito primordial de la sintaxis es proveer una notación para la comunic
 5. **Comentarios:** La inclusión de comentarios en un programa es una parte importante de su documentación. Un lenguaje puede permitir comentarios de varias maneras:
 	1. Renglones de comentarios por separado en el programa, como FORTRAN.
 	2. Delimitados por marcadores especiales, los  / * y  * / de C sin que importen los límites de renglón.
-	3. Comenzando en cualquier punto de un renglón pero ya concluidos al final del mismo, como el - en Ada, // en C++.
+	3. Comenzando en cualquier punto de un renglón pero ya concluidos al final del mismo, como el -- en Ada, // en C++.
 
 >[!info] Información Extra
 >La tercera alternativa incluye a la primera y también permite introducir un comentario breve después del enunciado o declaración en un renglón. La segunda alternativa tiene la desventaja de que la falta de un delimitador de conclusión en un comentario transforma los enunciados siguientes (hasta el final del siguiente comentario) en “comentarios”, de modo que, aunque parezcan correctos al leer el programa, de hecho no se traducen ni se ejecutan.
