--- a/Lenguajes de Programación/Unidad 2/2. Semántica.md
+++ b/Lenguajes de Programación/Unidad 2/2. Semántica.md
@@ -1,4 +1,3 @@
-
 ## Semántica Formal
 
 La semántica especifica el significado de las expresiones, sentencias y unidades del programa. En otras palabras, es la descripción rigurosa del significado o comportamiento de
@@ -28,7 +27,7 @@ Al contrario que las normas sintácticas que se pueden describir a través de la
 ## Semántica Estática
 
 #### Gramática de Atributos
-Uno de los primeros intentos para desarrollar un modelo semántico de un LP fue en concepto de gramáticas de atributos, desarrollado por Donald Knuth. La idea era asociar una función con cada nodo del árbol de análisis sintáctico de un programa, dando el contenido semántico de ese nodo. Las gramáticas de atributos se crearon agregando funciones (atributos) a cada regla de una gramática.
+Uno de los primeros intentos para desarrollar un modelo semántico de un lenguaje de programación fue en concepto de gramáticas de atributos, desarrollado por Donald Knuth. La idea era asociar una función con cada nodo del árbol de análisis sintáctico de un programa, dando el contenido semántico de ese nodo. Las gramáticas de atributos se crearon agregando funciones (atributos) a cada regla de una gramática.
 Es una gramática libre de contexto G = (S, N, T, P), a la que se le han agregado una serie de nuevos elementos que van a aportar más información al árbol sintáctico y nos será de utilidad a la hora de la implementación de un analizador semántico. Entre esos elementos se encuentran:
 
 - **Atributos**: Son las propiedades que posee una estructura semántica, la cual es asociada a cada estructura. Estos atributos varían según la información que contienen y en que proceso hayan sido creados. Un ejemplo de lo que podrían llegar a almacenar estos atributos sería: El tipo de una variable, el valor de una expresión, una dirección de memoria, estos atributos pueden ser: sintetizados, heredados o intrínsecos.
