Se corriguio lo de diseño grafico

--- a/Lenguajes de Programación/Unidad 3/2. Variables y constantes.md
+++ b/Lenguajes de Programación/Unidad 3/2. Variables y constantes.md
@@ -46,4 +46,9 @@ Existen dos tipos de constantes:
 >Parte del código se encuentra en la pila de ejecución (IRA) y las demas estructuras en el heap.
 >
 
-- **Lenguajes Dinámicos**: El tamaño de los objetos de datos varía en tiempo de ejecución, al igual que en los semi-dinámicos, con la diferencia que en los linguajes puramente dinamicos todo se almacena en el heap.
+- **Lenguajes Dinámicos**: El tamaño de los objetos de datos varía en tiempo de ejecución, al igual que en los semi-dinámicos, con la diferencia que en los lenguajes puramente dinámicos todo se almacena en el heap.
+
+>[!note] Nota
+>Este tipo de lenguajes de programación necesitan un **garbage collector**, ya que puede haber muchos objetos de datos que no estan siendo referenciadas.
+
+
