--- a/Créditos/Diseño Gráfico/1. Temas Basicos.md
+++ b/Créditos/Diseño Gráfico/1. Temas Basicos.md
@@ -6,43 +6,45 @@ Particularizando, entendimos el **Diseño gráfico** como la solución a probl
 La **psicología de la Gestalt** (también **psicología de la forma** o **psicología de la configuración**) es una corriente de la psicología moderna, surgida en Alemania a principios del siglo XX.
 El término _Gestalt_ proviene del alemán y puede traducirse, aquí, como "forma", "figura", "configuración" o "estructura".
 
-#### Leyes Generales de Gestalt
+<span class="centerImg"> ![[DF-interrelacion-formas.png]] </span>
 
-- **Ley de figuras y fondos**:​ La _figura_ es la zona de la percepción en la que se centra la conciencia y el _fondo_ es el resto de la percepción. La ley establece que no es posible percibir simultáneamente la misma zona como figura y fondo, por lo que siempre existen elementos en los que la conciencia se centra y elementos que esta ignora. Cuando no existe dicha oposición de un modo literal, la mente la provoca, mediante el contenido del inconsciente. La percepción subliminal es la percepción del fondo que no llega a hacerse figura y, por lo tanto, no llega a la conciencia, pero influye, de todas maneras, en el inconsciente.​ La percepción de figura y fondo puede depender de factores tales como la profundidad, la distancia y la oclusión.​
-- **Ley de pregnancia o buena figura**: La ley de la buena forma establece que la mente atribuye la mejor forma posible a la percepción. Esta ley se compone de leyes particulares, ya que la mente emplea varios criterios para determinar cuál forma es mejor. Por ej.: En las ilusiones ópticas paradójicas, la mente intenta atribuir formas conocidas a las partes de una forma desconocida, pero, cuando se ensambla la totalidad, se produce un error. Algunas de estas leyes particulares son:
-	- **Ley del Contraste:** Una forma es mejor percibida cuanto mayor sea contraste entre el fondo y la figura.​ El contraste puede ser de forma, tamaño, color, valor, dirección, textura o tratamiento.
-	- **Ley de Jerarquización:** Una forma es mejor percibida cuanto más principal y menos accesoria la mente la interprete.​
-	- **Ley de Birkhoff:** Una forma es mejor percibida, cuantos más ejes tenga.​
-	- **Ley de Memoria:** Una forma es mejor percibida cuantas más veces haya sido vista.
-	- **Ley del Cierre:** Una forma es mejor percibida cuanto más cerrada sea. Si un contorno no está completamente cerrado, la mente tiende a cerrarlo.​
-	- **Ley de la Continuidad o Compleción:** Una forma es mejor percibida cuanto más continua sea. Si el patrón se rompe, la mente tiende a continuarlo.​
-	- **Ley de la Proximidad:** Los elementos aislados, pero con cierta cercanía, tienden a ser considerados como grupos.​
-	- **Ley de la Simetría:** Los elementos que se organizan alrededor de un punto central, que es su núcleo, constituyen en todos los casos una forma pregnante.​
-	- **Ley de la Similitud:** Los elementos aislados, pero con cierta similitud, tienden a ser considerados como grupos.​
-	- **Ley del Movimiento Común:** Los elementos aislados, pero con movimiento común, tienden a ser considerados como grupos.​
-	- **Ley de Invariancia Topológica:** Una buena forma resiste a las deformaciones a las que sea sometida.​
-	- **Ley de Enmascaramiento:** Una buena forma resiste a las perturbaciones a las que sea sometida.
+- No percibimos las cosas como elementos inconexos, sino que los organizamos por el proceso de la percepción en conjuntos significativos.
+- **Repercusión visual**: Conjunto de actividades que comprenden el proceso de la visión al recibir el hombre las distintas señales del mundo circundante.
+- **Sensación**: recepción de señales.
+- **Selección**: discriminación del campo visual.
+- **Percepción**: recepción de señales por la psiquis.
 
->[!note] Nota
->De las últimas 2 leyes hay que explicar por ejemplo que la ley de invariancia topológica, se refiere a que por más que se deforme a la figura igual, se va a entender que es. Por ejemplo la siguiente imagen
->
-><span class="centerImg"> ![[DG-propiety.png]] </span>
->
->Como se puede apreciar por más extraña que sea esa mesita, aún se sigue entendiendo que ese objeto es una mesa.
->Por otro lado, la ley de enmascaramiento se refiere a que una figura es buena si resiste a las perturbaciones, se vera mejor con la siguiente imagen.
->
-><span class="centerImg"> ![[DG-property2.png]] </span>
->
->Se puede observar, que por más ausencia de luz que haya seguimos entendiendo que esa figura es la de un caballo
+#### Principios Gestálticos de la Percepción
 
-- **Principio de similitud**: La mente agrupa los elementos similares en una entidad. La semejanza depende de la forma, del tamaño, del color y de otros aspectos visuales de los elementos. Además, semeja las agrupaciones existentes en nuestra realidad a partir de la experiencia o praxis vivencial de nuestra memoria icónica.
-- **Principio de proximidad**: Habla del agrupamiento parcial o secuencial de elementos que lleva a cabo la mente, con base en la distancia. Los objetos adjuntos tienden a ser vistos como una unidad. Los estímulos que están próximos tienden a percibirse como parte de la misma unidad.
-- **Principio de simetría**: Las imágenes simétricas son percibidas como iguales, como un solo elemento, en la distancia. Este principio tiene tal trascendencia que va más allá del campo de la percepción de las formas y constituye uno de los principios o fenómenos fundamentales de la naturaleza.
-- **Principio de continuidad**: Los detalles que mantienen un patrón o dirección tienden a agruparse juntos, como parte de un modelo. Es decir, percibimos elementos continuos aunque estén interrumpidos entre sí.
-- **Principio de dirección común**: Implica que los elementos que parecen construir un patrón o un flujo en la misma dirección se perciben como una figura. Por ejemplo, las bandadas de pájaros que vuelan como un todo, es decir, **como si se tratara de un organismo único.**
-- **Principio de cerramiento o de cierre**: Las líneas que circundan una superficie se captan, en igualdad de circunstancias, más fácilmente como unidad o como figura, en comparación con aquellas otras que se unen entre sí. Las circunferencias, cuadriláteros o triángulos producen el efecto de cerramiento. Esta nueva ley parece ser operativa porque señala el hecho de que las líneas rectas paralelas forman grupos más definidos y estables que los puntos, que delimitan un espacio con más dificultad.
-- **Principio de Experiencia**: El principio de la experiencia afirma que, desde el punto de vista biológico, el sistema nervioso del ser humano se ha ido formando por el condicionamiento del mundo exterior. Las propiedades de las formas especiales y auditivas son conjuntos principales perceptuales y poseen cualidades que las distinguen de sus elementos. Dado esto, se afirma que las **sensaciones** se organizan en la conciencia y crean cualidades formales que pueden ser novedosas.
+1. **HOLÍSTICO**: Totalidad.
+2. **ISOMORFISMO**: "De igual forma", el proceso psicológico se relaciona directamente con los procesos biológicos y fisiológicos.
+3. **SIMPLICIDAD**: Todo estímulo tiende a verse de modo tal que la estructura resultante sea tan simple como lo permitan las condiciones dadas (contexto)
+4. **UNIDAD**: Antes de percibir el significado de los signos, nuestra psiquis capta la totalidad. Las unidades próximas entre sí, se agrupan espontáneamente en conjuntos mayores que los sostienen.
 
->[!info] Aclaración de Concepto
->La palabra pregnancia o pregnante, hacen referencia a la palabra **impregnar**, es decir que la pregnancia sería cuanto se te pego esa imagen o figura en tu subconsciente.
+#### Leyes de Gestalt
 
+- **LEY DE FIGURA - FONDO**: El proceso perceptivo remite a un mecanismo básico según el cual tendemos a focalizar nuestra atención sobre un objeto o determinado grupo de objetos articulados (figura) destacándolos del resto de los objetos "desorganizados" (fondo).
+
+<span class="centerImg"> ![[DG-ej-figura-fondo.png]] </span>
+
+- **LEY DE CIERRE**: La mente añade los elementos faltantes para completar una figura. Existe una tendencia innata a concluir las formas y los objetos que no percibimos completos.
+
+<span class="centerImg"> ![[DG-ej-cierre.png]] </span>
+
+<span class="centerImg"> ![[fedex.png]] </span>
+
+- **LEY DE CONTINUIDAD**: Los detalles que mantienen un patrón o dirección tienden a agruparse juntos, como parte de un modelo. Es decir, percibir elementos continuos aunque estén interrumpidos entre sí.
+
+<span class="centerImg"> ![[DG-ej-continuidad.png]] </span>
+
+- **LEY DE SEMEJANZA**: Nuestra mente agrupa los elementos similares en una entidad. La semejanza depende de la forma, el tamaño, el color y otros aspectos visuales de los elementos.
+
+<span class="centerImg"> ![[DG-ej-semejanza.png]] </span>
+
+- **LEY DE LA PROXIMIDAD**: También denominado de cercanía. Los elementos que se encuentran relativamente cercanos, se perciben formando una misma unidad, grupo o totalidad.
+
+<span class="centerImg"> ![[DG-ej-cercania.png]] </span>
+
+- **LEY DE DIRECCIÓN COMÚN**: Muchos elementos que parecen construir un patrón o un flujo en la misma o varias direcciones, son percibidos como un único elemento.
+
+<span class="centerImg"> ![[DG-ej-porqueria.png]] </span>
