--- a/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
+++ b/3° Año/Sistemas Operativos/Unidad 2/1. Procesos.md
@@ -1,4 +1,5 @@
 Un proceso es en esencia un ***programa en ejecución***. Cada proceso tiene asociado un espacio de direcciones, una lista de ubicaciones de memoria que va desde algún mínimo (generalmente 0, por lo general se habla de direcciones logicas) hasta cierto valor máximo, donde el proceso puede leer y escribir información. El espacio de direcciones contiene el programa ejecutable, los datos del programa y su pila. También hay asociado a cada proceso un conjunto de recursos, que comúnmente incluye registros (el contador de programa y el apuntador de pila, entre ellos) y toda la demás información necesaria para ejecutar el programa.
+También podemos entender a un proceso como ***unidad de trabajo***. Aunque su objetivo principal es la ejecución de programas de usuario, también tiene que ocuparse de diversas tareas del sistema, que no están incluidas dentro del kernel. Por tanto, un sistema está formado por una colección de procesos: procesos del SO que ejecutan código del sistema y procesos de usuario que ejecutan código de usuario.
 Cada cierto tiempo, el sistema operativo decide detener la ejecución de un proceso y empezar a ejecutar otro; debido a que el primero ha utilizado más tiempo del que le correspondía de la CPU en el último segundo, u otros tipos de situaciones.
 Cuando un proceso se ***suspende en forma temporal***, todos estos apuntadores deben guardarse de manera que una llamada a *read* que se ejecute después de reiniciar el proceso lea los datos apropiados. En muchos sistemas operativos, toda la información acerca de cada proceso (además del contenido de su propio espacio de direcciones) se almacena en una tabla del sistema operativo, conocida como la ***tabla de procesos***, la cual es un arreglo (o lista enlazada) de estructuras, una para cada proceso que se encuentre actualmente en existencia.
 De esta forma, un proceso (suspendido) consiste en su espacio de direcciones, que se conoce comúnmente como imagen de núcleo y su entrada en la tabla de procesos, que guarda el contenido de sus registros y muchos otros elementos necesarios para reiniciar el proceso más adelante.
@@ -8,18 +9,44 @@ De esta forma, un proceso (suspendido) consiste en su espacio de direcciones, qu
 
 ## El Modelo de Procesos
 
-En este modelo, todo el software ejecutable en la computadora, que algunas veces incluye al sistema operativo, se organiza en varios ***procesos secuenciales***. Un proceso no es más que una instancia de un programa en ejecución, incluyendo los valores actuales del contador de programa, los registros y las variables. En concepto, cada proceso tiene su propia CPU virtual; en la realidad, la CPU real conmuta de un proceso a otro.
-Cada proceso cuenta con su propio flujo de control (es decir, su propio contador de programa lógico) y se ejecutan de forma independiente. Desde luego que sólo hay un contador de programa físico, por lo que cuando se ejecuta cada proceso, se carga su contador de programa lógico en el contador de programa real. Cuando termina (por el tiempo que tenga asignado), el contador de programa físico se guarda en el contador de programa lógico almacenado, del proceso en memoria.
+En este modelo, todo el software ejecutable en la computadora, que algunas veces incluye al sistema operativo, se organiza en varios ***procesos secuenciales***. Un proceso no es más que una instancia de un programa en ejecución, incluyendo los valores actuales del contador de programa, los registros y las variables. Conceptualmente, cada proceso tiene su propia CPU virtual; pero en la realidad, la CPU real conmuta de un proceso a otro.
+Cada proceso cuenta con su propio flujo de control (es decir, su propio contador de programa lógico) y se ejecutan de forma independiente. Desde luego que sólo hay un contador de programa físico, por lo que cuando se ejecuta cada proceso, se carga su contador de programa lógico en el contador de programa real. Cuando termina (por el tiempo que tenga asignado o por una interrupción), el contador de programa físico se guarda en el contador de programa lógico almacenado, del proceso en memoria.
+
+>[!important] El Proceso es más que un Programa en Ejecución
+>Hay que resaltar que un proceso es algo más que el código de un programa (al que en ocasiones se denomina **sección de texto**) Además del código, un proceso incluye también la actividad actual, que queda representada por el valor del **contador de programa** y por los contenidos de los registros del procesador. Generalmente, un proceso incluye también la **pila** del proceso, que contiene datos temporales (parámetros de las funciones, las direcciones de retorno y las variables locales), y una **sección de datos**, que contiene las variables globales. El proceso puede incluir, asimismo, un **cúmulo de memoria,** que es la memoria que se asigna dinámicamente al proceso en tiempo de ejecución.
 
 <span class="centerImg"> ![[SO-procesos.png]] </span>
 
 >[!important] Diferencia entre Programa y Proceso
-> La diferencia entre un proceso y un programa es sutil pero crucial. Un ***programa*** la unidad pasiva que cuenta con todos los pasos que se deben realizar para que se ejecute de forma correcta. Mientras que el ***proceso*** es una unidad activa que se encargara de ir ejecutando las sentencias una a una.
+> La diferencia entre un proceso y un programa es sutil pero crucial. Un programa es una ***unidad pasiva***, un archivo que contiene una lista de instrucciones almacenadas en disco (denominado **archivo ejecutable**), mientras que un proceso es una ***entidad activa***, con un contador de programa que especifica la siguiente instrucción que hay que ejecutar y un conjunto de recursos asociados. Un programa se convierte en un proceso cuando se carga en memoria un archivo ejecutable.
 > La idea clave es que un proceso es una actividad de cierto tipo: tiene un programa, una entrada, una salida y un estado. Varios procesos pueden compartir un solo procesador mediante el uso de un algoritmo de planificación para determinar cuándo se debe detener el trabajo en un proceso para dar servicio a otro.
+> 
 > - Vale la pena recalcar que si un programa se está ejecutando por duplicado cuenta como dos procesos. El hecho de que dos procesos en ejecución tengan el mismo programa no importa; son procesos distintos. El sistema operativo es capaz de compartir el código entre ellos de manera que solo haya una copia en la memoria.
 >
 > Para que una unidad pasiva se convierta en una unidad activa, se le tiene que agregar información adicional, como por ejemplo, el PC (program counter), la orientación, su prioridad, entre otras cosas, y una vez que este se carga en memoria podemos decir que paso a ser una unidad activa.
 > Pero el SO para hacer todo eso primero debe fijarse como gestiona la memoria, si es mediante ***paginación*** o por ***segmentación***, si el SO funciona mediante paginación se va a trozar el programa en *N* páginas del mismo tamaño. Por otro lado, sí funciona mediante segmentación, se va a dividir el programa en rutinas, las cuales pueden variar su tamaño de una a otras.
 > Esto es importante saberlo, ya que dependiendo de cuál de los dos modelos tome, el procesador va a cargar diferentes páginas o segmentos cuando se realice la ejecución de las instrucciones.
 
+## Estado del proceso
+
+A medida que se ejecuta un proceso, el proceso va cambiando de **estado**. El estado de un proceso se define, en parte, según la actividad actual de dicho proceso. Cada proceso puede estar en uno de los siguientes estados:
+
+- **Nuevo:** El proceso está siendo creado.
+- **En ejecución:** Se están ejecutando las instrucciones
+- **En espera:** El proceso está esperando a que se produzca un suceso (como la terminación de una operación de E/S o la recepción de una señal)
+- **Preparado:** El proceso está a la espera de que le asignen a un procesador.
+- **Terminado:** Ha terminado la ejecución del proceso.
+
+Es importante darse cuenta de que solo puede haber un proceso *ejecutándose* en cualquier procesador en cada instante concreto. Sin embargo, puede haber muchos procesos *preparados* y en *espera*.
+
+## Bloque de control de proceso
+
+Cada proceso se representa en el SO mediante un **bloque de control de proceso** (PCB, process control block), también denominado *bloque de control de tarea*. Un bloque de control de proceso contiene muchos elementos de información asociados con un proceso específico, entre los que se incluyen:
+- **Estado del proceso.**
+- **Contador de programa.**
+- **Registros de la CPU.**
+- **Información de planificación de la CPU**
+- **Información de gestión de memoria**
+- **Información contable.**
+- **Información del estado de E/S.**
 
