Se agrego informacion sobre ligadura y los tipos de ligadura

--- a/3° Año/Lenguajes de Programación/Unidad 3/2. Variables y constantes.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/2. Variables y constantes.md
@@ -20,7 +20,7 @@ Existen dos tipos de constantes:
 
 ## Atributos de las Variables o Constantes
 
-- **Nombre**: es un conjunto de caracteres que se utiliza para referenciar a una variable o constante, por lo general se definen por medio de declaraciones. Es muy importantes tener en cuenta algunos factores a la hora del diseño, ya que la ***longitud, la sensibilidad a mayúsculas y la existencia de palabras reservadas***, van a influenciar en la representatividad de ese identificador.
+- **Nombre**: es un conjunto de caracteres que se utiliza para referenciar a una variable o constante, por lo general se definen por medio de declaraciones. Es muy importantes tener en cuenta algunos factores a la hora del diseño, ya que la ***longitud, la sensibilidad a mayúsculas y la existencia de palabras reservadas***, van a influenciar en la representatividad de ese identificador. Se modifican a traves de llamadas y devoluciones de subprogramas.
 - **Alcance**: Rango de sentencias en el cual una variable es visible o puede ser referenciada. Este alcance puede ser definido estáticamente o dinámicamente (ver [[1. Entidades]]). Dependiendo del alcance de los identificadores tendremos variables/constantes ***Globales*** las cuales posee un tiempo de vida equivalente a la ejecución de todo el programa y son visibles en cualquier parte del programa. Y las ***Locales*** donde el tiempo de vida y visibilidad están delimitados a una unidad.
 - **Tipo**: Establece el rango de valores y el conjunto de operaciones definidas para los valores del tipo. Los tipos pueden ligarse de forma dinámica (durante la ejecución) o estática (en compilación), además las declaraciones de tipos se pueden hacer de manera implícita, es decir, se asigna el tipo de dato en el momento que usamos la entidad; o explicita, en donde se debe declarar el tipo y el nombre del identificador por adelantado.
 - **Tiempo de vida**: Es el intervalo en el cual una variable está ligada a un área de almacenamiento específica. Comienza cuando se liga a una celda específica y finaliza cuando se desliga de la celda. De aquí surgen dos términos, ***alocación y desalocación***. El tiempo de vida va a variar de acuerdo a como sea la ligadura, de acuerdo a esto podremos clasificarlas en:
