Se margeo lo escrito en cosas para agregar de LP y se corrigieron algunos errores en la redacción de algunas otras notas

--- a/3° Año/Lenguajes de Programación/Unidad 2/1. Sintaxis.md
+++ b/3° Año/Lenguajes de Programación/Unidad 2/1. Sintaxis.md
@@ -5,8 +5,8 @@ Partiendo de la base de que un lenguaje de programación es un conjunto de notac
 >[!note] Terminología
 >**Lenguaje**: conjuntos de cadenas de caracteres válidos pertenecientes algún alfabeto.
 >**Sentencia**: cada una de estas cadenas.
->**Lexemas**: unidades sintácticas de más bajo nivel. Por Ej.: ***+, *, else, begin, end, contador, suma, etc***.
->**Token**: categoría a la que pertenece un lexemas. Por Ej.: identificadores, símbolos_de_operador, etc. vease con mas claridad en el siguiente cuadro:
+>**Lexemas**: unidades sintácticas de más bajo nivel. Por Ej.: ***+,  /,  else,  begin,  end, contador,  suma,  etc***.
+>**Token**: categoría a la que pertenece un lexema. Por Ej.: identificadores, símbolos_de_operador, etc. véase con más claridad en el siguiente cuadro:
 >
 > <span class="centerImg"> ![[LP-sintaxis.png]] </span>
 > 
@@ -60,7 +60,7 @@ El propósito primordial de la sintaxis es proveer una notación para la comunic
 1. **Identificadores (Variable):** La sintaxis básica para identificadores consiste en una cadena de letras y dígitos, casi siempre comienza con una letra, tiene amplia aceptación. 
 
 >[!note] Variaciones y Limitaciones
->Las variaciones entre lenguajes se dan principalmente en la inclusión opcional de caracteres especiales como . o - para mejorar la legibilidad. Y en las restricciones de longitud, como sucedía en FORTRAN con un límite de seis caracteres, obligan al uso de identificadores con poco valor nemotécnico en muchos casos y restringiendo la legibilidad del programa en forma significativa.
+>Las variaciones entre lenguajes se dan principalmente en la inclusión opcional de caracteres especiales como . o - para mejorar la legibilidad. Y en las restricciones de longitud, como sucedía en FORTRAN con un límite de seis caracteres, obligan al uso de identificadores con poco valor mnemotécnico en muchos casos y restringiendo la legibilidad del programa en forma significativa.
 
  2. **Símbolos de operadores:** El campo de aplicación del lenguaje define las operaciones que serán soportadas por el lenguaje, así como la asociación de un símbolo a la operación que realiza. Por Ej.: el símbolo + para la operación de suma o el - para la resta, pero más allá de esto casi no existe uniformidad.
  
