--- a/3° Año/Lenguajes de Programación/Unidad 2/2. Semántica.md
+++ b/3° Año/Lenguajes de Programación/Unidad 2/2. Semántica.md
@@ -22,7 +22,7 @@ las construcciones de un Lenguaje de programación, teniendo una gran importanci
 Al contrario que las normas sintácticas que se pueden describir a través de la notación BNF, para la semántica no existe un estándar o única forma de describirlo, por lo que contamos con varias formas de hacerlo, entre ellas:
 
 - **Semántica Estática**: Hay características de los lenguajes de programación que no pueden ser descritas mediante notaciones libres de contexto (BNF o EBNF), pero que se pueden resolver en tiempo de compilación. Está mucho más relacionado con las formas y estructuras válidas permitidas, o en el chequeo de tipos. Para describir este tipo de semántica se utiliza una notación de ***Gramática de Atributos***.
-- **Semántica Dinámica**: Describe el significado de las expresiones, sentencias y de las unidades del programa en tiempo de ejecución. Para describir este tipo de semántica se pueden utilizar diferentes notaciones, entre ellas: la ***Operacional,*** la que resulta útil para los implementadores, ***Axiomática*** que está más orientada a los programadores y ***Denotacional***, la cual es utilizada por el diseñador para descubrir ambigüedades en las sentencias del lenguaje que esta diseñando.
+- **Semántica Dinámica**: Describe el significado de las expresiones, sentencias y de las unidades del programa en tiempo de ejecución. Para describir este tipo de semántica se pueden utilizar diferentes notaciones, entre ellas: la ***Operacional,*** la que resulta útil para los implementadores, ***Axiomática*** que está más orientada a los programadores y ***Denotacional***, la cual es utilizada por el diseñador para descubrir ambigüedades en las sentencias del lenguaje que está diseñando.
 
 ## Semántica Estática
 
@@ -30,7 +30,7 @@ Al contrario que las normas sintácticas que se pueden describir a través de la
 Uno de los primeros intentos para desarrollar un modelo semántico de un lenguaje de programación fue en concepto de gramáticas de atributos, desarrollado por Donald Knuth. La idea era asociar una función con cada nodo del árbol de análisis sintáctico de un programa, dando el contenido semántico de ese nodo. Las gramáticas de atributos se crearon agregando funciones (atributos) a cada regla de una gramática.
 Es una gramática libre de contexto G = (S, N, T, P), a la que se le han agregado una serie de nuevos elementos que van a aportar más información al árbol sintáctico y nos será de utilidad a la hora de la implementación de un analizador semántico. Entre esos elementos se encuentran:
 
-- **Atributos**: Son las propiedades que posee una estructura semántica, la cual es asociada a cada estructura. Estos atributos varían según la información que contienen y en que proceso hayan sido creados. Un ejemplo de lo que podrían llegar a almacenar estos atributos sería: El tipo de una variable, el valor de una expresión, una dirección de memoria, estos atributos pueden ser: sintetizados, heredados o intrínsecos.
+- **Atributos**: Son las propiedades que posee una estructura semántica, la cual es asociada a cada estructura. Estos atributos varían según la información que contienen y en que proceso hayan sido creados. Un ejemplo de lo que podrían llegar a almacenar estos atributos sería: El tipo de una variable, el valor de una expresión, una dirección de memoria. Estos atributos pueden ser: sintetizados, heredados o intrínsecos.
 
 - **Atributos Sintetizados S(x)**: Cuando la información es pasada de abajo hacia arriba entre los distintos nodos del árbol sintáctico.
 
@@ -40,7 +40,7 @@ Es una gramática libre de contexto G = (S, N, T, P), a la que se le han agregad
 - **Atributos Heredados I(x)**: Cuando la información fluye de arriba hacia abajo entre los distintos nodos del árbol sintáctico.
 
 >[!info] Creación de los Atributos Heredados
->Estos atributos que se transfieren desde un símbolo no terminal a uno o más de sus símbolos hijos. Estos atributos se utilizan para representar información que se "hereda" de un nivel de la gramática a otro. Un ejemplo de un atributo heredado podría ser el tipo de dato de una variable en un programa, que se hereda desde la declaración de la variable a su uso posterior en el código.
+>Son atributos que se transfieren desde un símbolo no terminal a uno o más de sus símbolos hijos. Estos atributos se utilizan para representar información que se "hereda" de un nivel de la gramática a otro. Un ejemplo de un atributo heredado podría ser el tipo de dato de una variable en un programa, que se hereda desde la declaración de la variable a su uso posterior en el código.
 
 - **Atributos Intrínsecos**: Son un caso particular de valor sintetizado, el cual solo es asignado a las hojas del árbol y que son calculados por fuera del árbol sintáctico, y guardados en la tabla de símbolos.
 
@@ -48,7 +48,7 @@ Es una gramática libre de contexto G = (S, N, T, P), a la que se le han agregad
 >Son aquellos atributos que están asociados a un símbolo no terminal, estos atributos son calculados por el analizador léxico y guardado en la ***tabla de símbolos*** para su posterior uso.
 >Estos atributos se utilizan para representar información que es inherente a un símbolo no terminal, como el nombre de una variable en un programa o el valor de una constante en una expresión.
 
->[!info] Uso de esta Gramática
+>[!important] Uso de esta Gramática
 >Las gramáticas de atributos se pueden usar para transmitir información semántica por todo el árbol sintáctico. Por ejemplo, las producciones de un lenguaje pueden recoger información de declaraciones y esa información de la tabla de símbolos se puede transmitir hacia abajo del árbol para usarse en la generación de código.
 
 - **Reglas Semánticas**: son un conjunto de funciones que sirve para definir y calcular los valores de los atributos definidos, y están asociados a las reglas de la gramática.
