--- a/3° Año/Lenguajes de Programación/Unidad 3/1. Entidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/1. Entidades.md
@@ -4,15 +4,29 @@ Podemos decir que un programa está compuesto por entidades, dichas entidades pu
 Al mismo tiempo, una entidad puede ser atributo de otra entidad. Por Ej.: en caso de una sentencia, uno de sus atributos pueden ser variables que se están sumando o incluso subprogramas al que se le asignara su retorno a una variable.
 
 >[!important] Relación entre las Entidades y sus Atributos
->Los atributos que tiene cada entidad son asignados a estas mediante las ***ligaduras***. Estas ligaduras puede ser:
+>Los atributos que tiene cada entidad son asignados a estas mediante las ***ligaduras o enlaces***.  El momento durante la formulación o procesamiento del programa en el que se hace esta elección se conoce como el tiempo de ligadura de esa propiedad para ese elemento. Estas ligaduras puede ser:
 >- ***Estática***: La ligadura se hace antes de la ejecución del programa, lo que le brinda más eficiencia a los programas, a su vez las ligaduras dinámicas se pueden clasificar de dos formas:
->	- **Enlaces elegidos por el programador** -> por ejemplo, la declaración de un tipo a una variable (en caso de que el lenguaje funciones de esa manera)
->	- **Enlaces elegidos por el traductor** -> son aquellas que están determinadas por la implementación, y el programador no sabe como funcionan ni como lo hace.
->- ***Dinámica*** La ligadura se realiza en tiempo de ejecución, permitiendo más flexibilidad a la hora de las asignaciones. Por otro lado, la ligadura dinámica puede realizarse:
->	- **Al inicio de la ejecución de una unidad** -> por ejemplo, al llamar a un subprograma, los parámetros se ligan en ese preciso momento.
->	- **En cualquier punto de la ejecución** -> por ejemplo, en el caso de Python, la ligadura se hace a medida que sé van ejecutando las sentencia.
+>	- **Enlaces elegidos por el programador** -> Al escribir un programa, el programador toma conscientemente muchas decisiones respecto a opciones de nombres de variables, tipos para las variables, etc. Que representan enlaces durante la traducción. El traductor del lenguaje utiliza estos enlaces para determinar la forma final del programa objeto. Por ejemplo, la declaración de un tipo a una variable (en caso de que el lenguaje funciones de esa manera)
+>	- **Enlaces elegidos por el traductor** -> Ciertos enlaces son elegidos por el traductor del lenguaje sin que el programador los especifique directamente. Por ejemplo, la localidad relativa de un objeto de datos en el almacenamiento asignado para un procedimiento, esto se maneja en general sin el conocimiento o intervención del programador. Como se guardan los arreglos, en su caso, es otra decisión que toma el traductor del lenguaje.
+>- ***Dinámica*** Muchos enlaces se llevan a cabo durante la ejecución del programa. Esto incluye enlaces de variables a sus valores, así como el enlace de variables a localidades particulares de almacenamiento, este tipo de enlaces le da más flexibilidad al lenguaje, pero le quita seguridad. Es posible distinguir dos subcategorías importantes:
+>	- **Al inicio de la ejecución de una unidad** -> En casi todos los lenguajes, las clases importantes de enlaces solo pueden ocurrir en el momento de entrar a un subprograma o bloque durante la ejecución. Por ejemplo. En C y Pascal, el enlace de parámetros formales a reales y el enlace de parámetros formales a localidades particulares de almacenamiento solo pueden ocurrir a entrar a un subprograma.
+>	- **En cualquier punto de la ejecución** -> Ciertos enlaces pueden ocurrir en cualquier punto durante la ejecución de un programa. El ejemplo más importante en este caso es el enlace básico de variables a valores a través de asignación, aunque ciertos lenguajes como LISP también permiten que ocurra el enlace de nombres a localidades de almacenamiento en puntos arbitrarios del programa.
 
-Las ligaduras en todos los lenguajes formales se pueden especificar mediante ***declaraciones***. Estas declaraciones se pueden clasificar en:
+#### Distinción ente Estático y Dinámico
+
+Una de las cuestiones más importantes a las que nos enfrentamos al diseñar un compilador para un lenguaje es la de qué decisiones puede realizar el compilador acerca de un programa. Si un lenguaje utiliza una directiva que permite al compilador decidir sobre una cuestión, entonces decimos que el lenguaje utiliza una ***directiva estática***, o que las cuestiones referentes a las ligaduras se pueden decidir en *tiempo de compilación*. Por otro lado, si directiva sólo permite realizar una decisión a la hora de ejecutar el programa, estamos en presencia de una ***directiva dinámica***, o que requiere una decisión en tiempo de ejecución.
+Un lenguaje utiliza el ***alcance estático*** (también llamados alcance léxico) si es posible determinar el alcance de una declaración con sólo ver el programa. En cualquier otro caso, el lenguaje utiliza un ***alcance dinámico***. Con el alcance dinámico, a medida que se ejecuta el programa, el mismo uso de x podría referirse a una de varias declaraciones distintas de x.
+
+>[!example] Ejemplo
+> Un ejemplo de la distinción entre estático y dinámico. Considere el uso del término “static” según se aplica a los datos en la declaración de una clase en Java. En Java, una variable es un nombre para una ubicación en memoria que se utiliza para almacenar un valor de datos. Aquí, “static” no se refiere al alcance de la variable, sino a la habilidad del compilador para determinar la ubicación en memoria en la que puede encontrarse la variable declarada. Una declaración como:
+> - **public static int x;**
+> 
+> Hace de x una variable de clase e indica que sólo hay una copia de x, sin importar cuántos objetos se creen de esta clase. Es más, el compilador puede determinar una ubicación en memoria en la que se almacene este entero x.
+> Si se hubiera omitido la palabra “static” de esta declaración, entonces cada objeto de la clase tendría su propia ubicación en la que se guardara x, y el compilador no podría determinar todos estos lugares antes de ejecutar el programa. 
+
+## Las Declaraciones
+
+Las ligaduras en todos los lenguajes formales se pueden especificar mediante ***declaraciones***. Una declaración es un enunciado de programa que sirve para comunicar al traductor del lenguaje, información acerca del nombre y tipo de los objetos de datos que se necesitan durante la ejecución del programa. Una declaración también puede servir para indicar los tiempos de vida deseados de los objetos de datos. (Dentro de un subprograma, por ejemplo). Estas declaraciones se pueden clasificar en:
 
 - ***Implícitas***: La ligadura se establece la primera vez que el identificador es utilizado, de acuerdo a reglas implícitas del lenguaje, esto en detrimento de la *legibilidad* y la *confiabilidad*. Por Ej.: En PHP cuando se declara una variable no es necesario declarar su tipo, pero el intérprete liga su valor una vez encuentra una sentencia con esa variable.
 - ***Explícitas***: Una declaración define nombres de entidades y especifica su tipo particular. A su vez, estas pueden ser:
@@ -24,10 +38,10 @@ Las ligaduras en todos los lenguajes formales se pueden especificar mediante ***
 >Es una frase que crea una ligadura entre una entidad, un nombre y un tipo de dato.
 
 >[!hint] Propósito de las Declaraciones
->1. **Selección de representación de almacenamiento**: El compilador puede determinar la mejor representación de almacenamiento para esa entidad.
->2. **Gestión de almacenamiento**: Permiten el uso de procedimientos que hacen más eficiente la gestión de almacenamiento durante la ejecución del programa.
->3. **Operaciones polimórficas**: Permiten al compilador del lenguaje determinar en tiempo de compilación cuál es la operación particular que designa un operador homónimo.
->4. **Verificación de tipo**: Ayuda a la verificación de tipos antes de la ejecución del programa.
+>1. **Selección de representación de almacenamiento**: Si una declaración proporciona información al traductor del lenguaje acerca del tipo de datos y los atributos de un objeto de datos, entonces el traductor suele poder determinar la mejor representación de almacenamiento para ese objeto de datos, con una reducción consecuente del requerimiento global de almacenamiento y del tiempo de ejecución para el programa que se está traduciendo.
+>2. **Gestión de almacenamiento**: La información que proporcionan las declaraciones acerca de los tiempos de vida de objetos de datos suele hacer posible el uso de procedimientos más eficientes de gestión de almacenamiento durante la ejecución del programa. Por ejemplo, en C, todos los objetos de datos declarados al principio del subprograma tienen el mismo tiempo de vida (igual a la duración de la ejecución del subprograma) y, por tanto, se les puede asignar almacenamiento como un solo bloque al entrar al subprograma, y el bloque completo se libera al salir.
+>3. **Operaciones polimórficas**: Casi todos los lenguajes usan símbolos especiales como ***+ o -*** para designar una de las varias operaciones diferentes definidas para ese operador, que de acuerdo con los tipos de datos de los argumentos que se suministren, la operación se realizara de una forma u otra. Se dice que tiene un ***homónimo*** porque no designa una operación específica y única, sino que denota una operación *genérica* de "sumar o resta" que puede tener varias formas diferentes, la especificación varía según el tipo de argumentos de tipos distintos. Si son homónimo denotan operaciones genéricas.
+>4. **Verificación de tipo**: El propósito más importante de las declaraciones, desde el punto de vista del programador (usuario), es permitir la verificación estática de tipos antes que la verificación dinámica, en otras palabras, ayuda a la verificación de tipos antes de la ejecución del programa.
 
 ---
 
