Se agrego nuevo archivo de LP que resume la clase del 03-05-2023

--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
@@ -105,7 +105,7 @@ Entonces, dados dos autómatas ***A(Q, Σ, δ, q0 , F) y A´(Q´, Σ´, δ´, q0
 Los algoritmos que simulan o implementan automatas finitos deterministas suelen requerir un espacio más o menos proporcional al número de estados del autómata, por lo que interesa que el número de dichos estados sea el menor posible. En un autómata puede haber dos tipos de estados *innecesarios*, que es posible eliminar o combinar para minimizar el número de estados. Por esta razón, existen dos operaciones de minimización diferentes:
 
 - ***Eliminación de estados inaccesibles***: Un estado es inaccesible si no se puede alcanzar desde el estado inicial del AFD siguiendo cualquier combinación de transiciones de entrada. Estos estados no son necesarios para el funcionamiento del AFD y pueden ser eliminados sin afectar su comportamiento.
-- **Agrupación de estados equivalentes o indistinguibles**: Dos estados son equivalentes si tienen el mismo comportamiento desde la perspectiva de cualquier cadena de entrada. Es decir, si tienen las mismas transiciones de entrada y salida y llegan a estados finales o no finales de manera similar. La agrupación de estados equivalentes en un único estado reduce el número total de estados del AFD.
+- ***Agrupación de estados equivalentes o indistinguibles***: Dos estados son equivalentes si tienen el mismo comportamiento desde la perspectiva de cualquier cadena de entrada. Es decir, si tienen las mismas transiciones de entrada y salida y llegan a estados finales o no finales de manera similar. La agrupación de estados equivalentes en un único estado reduce el número total de estados del AFD.
 
 Un autómata es una ***simplificación*** de otro si tiene menos estados, pero ambos aceptan el mismo lenguaje. Esto se sabe mediante conocer que dos estados de ese autómata son equivalentes, una vez que sabemos eso podemos eliminar uno de ellos y las "flechas" que salen son eliminadas y las que entran se dirigen al estado equivalente.
 Existen dos métodos de simplificación:
