Modificaciones a la unidad 3 de LP - mas estetica

--- a/3° Año/Lenguajes de Programación/Unidad 3/1. Entidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/1. Entidades.md
@@ -5,7 +5,7 @@ Al mismo tiempo, una entidad puede ser atributo de otra entidad. Por Ej.: en cas
 
 >[!important] Relación entre las Entidades y sus Atributos
 >Los atributos que tiene cada entidad son asignados a estas mediante las ***ligaduras o enlaces***.  El momento durante la formulación o procesamiento del programa en el que se hace esta elección se conoce como el tiempo de ligadura de esa propiedad para ese elemento. Estas ligaduras puede ser:
->- ***Estática***: La ligadura se hace antes de la ejecución del programa, lo que le brinda más eficiencia a los programas, a su vez las ligaduras dinámicas se pueden clasificar de dos formas:
+>- ***Estática***: La ligadura se hace antes de la ejecución del programa, lo que le brinda más eficiencia a los programas, a su vez las ligaduras estáticas se pueden clasificar de dos formas:
 >	- **Enlaces elegidos por el programador** -> Al escribir un programa, el programador toma conscientemente muchas decisiones respecto a opciones de nombres de variables, tipos para las variables, etc. Que representan enlaces durante la traducción. El traductor del lenguaje utiliza estos enlaces para determinar la forma final del programa objeto. Por ejemplo, la declaración de un tipo a una variable (en caso de que el lenguaje funciones de esa manera)
 >	- **Enlaces elegidos por el traductor** -> Ciertos enlaces son elegidos por el traductor del lenguaje sin que el programador los especifique directamente. Por ejemplo, la localidad relativa de un objeto de datos en el almacenamiento asignado para un procedimiento, esto se maneja en general sin el conocimiento o intervención del programador. Como se guardan los arreglos, en su caso, es otra decisión que toma el traductor del lenguaje.
 >- ***Dinámica*** Muchos enlaces se llevan a cabo durante la ejecución del programa. Esto incluye enlaces de variables a sus valores, así como el enlace de variables a localidades particulares de almacenamiento, este tipo de enlaces le da más flexibilidad al lenguaje, pero le quita seguridad. Es posible distinguir dos subcategorías importantes:
@@ -14,7 +14,7 @@ Al mismo tiempo, una entidad puede ser atributo de otra entidad. Por Ej.: en cas
 
 #### Distinción ente Estático y Dinámico
 
-Una de las cuestiones más importantes a las que nos enfrentamos al diseñar un compilador para un lenguaje es la de qué decisiones puede realizar el compilador acerca de un programa. Si un lenguaje utiliza una directiva que permite al compilador decidir sobre una cuestión, entonces decimos que el lenguaje utiliza una ***directiva estática***, o que las cuestiones referentes a las ligaduras se pueden decidir en *tiempo de compilación*. Por otro lado, si directiva sólo permite realizar una decisión a la hora de ejecutar el programa, estamos en presencia de una ***directiva dinámica***, o que requiere una decisión en tiempo de ejecución.
+Una de las cuestiones más importantes a las que nos enfrentamos al diseñar un compilador para un lenguaje es la de qué decisiones puede realizar el compilador acerca de un programa. Si un lenguaje utiliza una directiva que permite al compilador decidir sobre una cuestión, entonces decimos que el lenguaje utiliza una ***directiva estática***, o que las cuestiones referentes a las ligaduras se pueden decidir en *tiempo de compilación*. Por otro lado, si las directivas sólo permite realizar decisiones a la hora de ejecutar el programa, estamos en presencia de una ***directiva dinámica***, o que requiere una decisión en tiempo de ejecución.
 Un lenguaje utiliza el ***alcance estático*** (también llamados alcance léxico) si es posible determinar el alcance de una declaración con sólo ver el programa. En cualquier otro caso, el lenguaje utiliza un ***alcance dinámico***. Con el alcance dinámico, a medida que se ejecuta el programa, el mismo uso de x podría referirse a una de varias declaraciones distintas de x.
 
 >[!example] Ejemplo
@@ -28,7 +28,7 @@ Un lenguaje utiliza el ***alcance estático*** (también llamados alcance léxic
 
 Las ligaduras en todos los lenguajes formales se pueden especificar mediante ***declaraciones***. Una declaración es un enunciado de programa que sirve para comunicar al traductor del lenguaje, información acerca del nombre y tipo de los objetos de datos que se necesitan durante la ejecución del programa. Una declaración también puede servir para indicar los tiempos de vida deseados de los objetos de datos. (Dentro de un subprograma, por ejemplo). Estas declaraciones se pueden clasificar en:
 
-- ***Implícitas***: La ligadura se establece la primera vez que el identificador es utilizado, de acuerdo a reglas implícitas del lenguaje, esto en detrimento de la *legibilidad* y la *confiabilidad*. Por Ej.: En PHP cuando se declara una variable no es necesario declarar su tipo, pero el intérprete liga su valor una vez encuentra una sentencia con esa variable.
+- ***Implícitas***: La ligadura se establece la primera vez que el identificador es utilizado, de acuerdo a reglas implícitas del lenguaje, esto en detrimento de la *legibilidad* y la *confiabilidad*. Por Ej.: En PHP cuando se declara una variable no es necesario declarar su tipo, pero el intérprete liga su valor una vez encuentra una sentencia de asignación con esa variable.
 - ***Explícitas***: Una declaración define nombres de entidades y especifica su tipo particular. A su vez, estas pueden ser:
 	- Definiciones.
 	- Secuenciales.
@@ -47,15 +47,15 @@ Las ligaduras en todos los lenguajes formales se pueden especificar mediante ***
 
 - **Alcance (Scope en JavaScript)**: Porción de código en la cual una variable puede ser referenciada. El alcance puede ser:
 	- **Estático**: En el caso de los programas anidados, si una variable es requerida para realizar una operación, se va a buscar en las estructuras que la envuelven hasta encontrarla, aclarar que se va a quedar siempre con la entidad más cercana.
-	- **Dinámica**: Está dado por el flujo de las llamadas en ejecución, es decir, teniendo los siguientes subprogramas en la pila de llamadas A -> B -> C, supongamos que C necesita de una entidad de nombre *var* la cual no se encuentra en su entorno, lo que va a pasar es que se va a buscar esta variable a B, en caso de no encontrarla a A y así hasta encontrarla
-
->[!important] Solapamiento de Atributos
->Tomando el ejemplo anterior, supongamos que se debe realizar una operación en C con una variable de nombre ***x*** local, ***y*** una variable y que están declaradas tanto en *A* y en *B*, lo que pasara en ese caso es que para resolver la operación se va a quedar con la y definida en B, lo mismo va a ocurrir en el caso de el alcance estático.
-
-- **Visibilidad**: Una entidad es visible si se puede hacer uso de estas variables o métodos pueden ser usadas para realizar sentencias en esa porción del código.
-- **Ambiente de referencia**: Conjunto de entidades ligadas que pueden ser referenciadas o son visibles en sentencia, es decir, que para saber el ambiente de referencia debo enfocarme en una sentencia y ver qué entidades pueden ser referenciadas por esta. Los ambientes de referencia se pueden clasificar en:
+	- **Dinámica**: Está dado por el flujo de las llamadas en ejecución, es decir, teniendo los siguientes subprogramas en la pila de llamadas A -> B -> C, supongamos que C necesita de una entidad de nombre *var* la cual no se encuentra en su entorno, lo que va a pasar es que se va a buscar esta variable a B, en caso de no encontrarla a A y así hasta encontrarla.
+- **Visibilidad**: Una entidad es visible si puede ser referenciada y utilizada para realizar sentencias en esa porción del código.
+- **Ambiente de referencia**: Conjunto de entidades ligadas que pueden ser referenciadas o son visibles para una sentencia, es decir, que para saber el ambiente de referencia debo enfocarme en una sentencia y ver qué entidades pueden ser referenciadas por esta. Los ambientes de referencia se pueden clasificar en:
 	- **Lenguajes con alcance estático**: El ambiente de referencia está conformado por todas las entidades locales al bloque, más todas las visibles desde sus antecesores.
 	- **Lenguajes con alcance dinámico**: El ambiente de referencia está conformado por todas las entidades locales al bloque, más todas las demás visibles desde el resto de subprogramas activos.
+
+>[!important] Solapamiento de Entidades
+>Tomando el ejemplo anterior, con la diferencia de que los códigos de dichos programas están encadenados, supongamos que se debe realizar una operación en C con una variable de nombre ***x*** local, y una variable ***z*** que están declaradas tanto en *A* y en *B*, lo que pasara en ese caso es que para resolver la operación se va a quedar con la y definida en B. Esto en el caso de los lenguajes de alcance estático, ya que en los lenguajes de alcance dinámico esto va a estar dado por el flujo del programa.
+
 
 Para entender mucho mejor este concepto veamos el siguiente ejemplo:
 
