--- a/3° Año/Lenguajes de Programación/Unidad 3/3. Reglas de Alcance.md
+++ b/3° Año/Lenguajes de Programación/Unidad 3/3. Reglas de Alcance.md
@@ -7,11 +7,11 @@
 >- Dinámica
 
 
-## Reglas de Alcance Estático
+# Reglas de Alcance Estático
 
 En este tipo de alcance, las referencias son resueltas en tiempo de compilación. Supongamos que dentro de un subprograma de nombre **A**, se encuentra definido otro de nombre **B**, en este caso A sería el ***padre estático*** de B. Ahora supongamos que dentro de B existe otra definición de subprograma con nombre **C**, el padre estático de C sería B, mientras que A sería su ***antepasado estático***.
 
-#### Implementación de Referencias no Locales
+## Implementación de Referencias no Locales
 
 En los lenguajes que emplean reglas de alcance estáticas, todas las variables no locales residen en alguna instancia de registro de activación, en la pila de llamadas.
 El proceso para localizar una referencia no local es el siguiente:
@@ -33,7 +33,9 @@ A su vez, existen dos técnicas para localizar las entidades no locales al méto
 >[!info] El CallStack
 >La pila de llamadas se va formando de acuerdo a los subprogramas que se van llamando.
 
-- **Cadena Estática**: Es una cadena de enlaces estáticos que vincula instancias de registro de activación en la pila. En este modelo, la dirección en la que se encuentra una entidad no local está compuesta por el siguiente par -> ***(Desplazamiento de Cadena, Desplazamiento Local)***, en el siguiente ejemplo:
+#### Cadena Estática
+
+Es una cadena de enlaces estáticos que vincula instancias de registro de activación en la pila. En este modelo, la dirección en la que se encuentra una entidad no local está compuesta por el siguiente par -> ***(Desplazamiento de Cadena, Desplazamiento Local)***, en el siguiente ejemplo:
 
 <span class="centerImg"> ![[LP-alc-est-ej1.png]] </span>
 
@@ -42,7 +44,9 @@ A su vez, existen dos técnicas para localizar las entidades no locales al méto
 >[!important] Explicación del Ejemplo
 >En el siguiente código podemos ver como todos los distintos subprogramas están anidadas y todas las entidades declaradas dentro de ellos, a continuación en la segunda imagen se ve el CallStack de un programa, como se puede ver en la llamada al subprograma ***sub3*** este va a buscar las variables no locales a él a su padre estático, y en caso de no encontrarlo irá recorriendo todos sus ancestros hasta llegar a la variable que busca. Es importante aclarar que si un subprograma es llamado y necesita buscar variables que no se encuentran localmente y su padre estático no se encuentra cargado en el CallStack, ocurrirá un error en la ejecución.
 
-- **Display**: Consiste en colocar los enlaces estáticos en una pila, llamada display. Las entradas son punteros a las instancias de registro de activación que tienen las variables en el ambiente de referenciamiento. Una referencia a una entidad no local, puede ser representada por el siguiente par -> ***(Desplazamiento en el Display, Desplazamiento Local)***, en donde el Desplazamiento en el display = Desplazamiento de Cadena. Veremos vas de sus peculiaridades en el siguiente ejemplo.
+#### Display
+
+Consiste en colocar los enlaces estáticos en una pila, llamada display. Las entradas son punteros a las instancias de registro de activación que tienen las variables en el ambiente de referenciamiento. Una referencia a una entidad no local, puede ser representada por el siguiente par -> ***(Desplazamiento en el Display, Desplazamiento Local)***, en donde el Desplazamiento en el display = Desplazamiento de Cadena. Veremos vas de sus peculiaridades en el siguiente ejemplo.
 
 <span class="centerImg">![[LP-display-ej1.png]]  </span>
 
@@ -52,22 +56,27 @@ A su vez, existen dos técnicas para localizar las entidades no locales al méto
 >2. Usa el desplazamiento local para llegar a la variable dentro de la instancia de registro de activación.
 >En el ejemplo vemos como se colocan los punteros a las respectivas instancias de registro de activación, de cada subprograma, de acuerdo al desplazamiento de cadena que posea cada bloque. Como se ven en el otro caso, si se apila en el CallStack un subprograma que posea un mismo desplazamiento de cadena que otro ya apilado, lo que sucederá es que se guardara el puntero del antiguo registro de activación y se pone el nuevo, luego cundo se termina la llamada a ese subprograma, se descarta ese puntero y se vuelve al antiguo.
 
-## Reglas de Alcance Estático
+# Reglas de Alcance Estático
 
 Los lenguajes que cuenta con este tipo de reglas de alcance, las referencias se resuelven en tiempo de ejecución siguiendo el flujo de activación de unidades. Supongamos que **A** es un método que realiza una llamada a **B**, en este caso A sería el padre de B. Ahora si en la misma estructura de llamadas, B llama a **C**, B sería el padre de C y A su antepasado.
 
-#### Implementación de Referencias no Locales
+## Implementación de Referencias no Locales
 
 Al contrario que las reglas de alcance estáticas, las dinámicas se resuelven en tiempo de ejecución. Y al igual que las estáticas, existen dos métodos de implementar a las reglas de alcance dinámico:
 
-- **Acceso Profundo**: Las referencias de las variables no locales se encuentran buscando en las instancias de registro de activación en la cadena dinámica. A diferencia de la ***Cadena Estática,*** la longitud de la cadena no puede ser determinada estáticamente y además, debido a que se resuelve todo en ejecución, la *IRA* debe tener almacenada el nombre de las variables. Véase en el Ejemplo:
+
+#### Acceso Profundo
+
+Las referencias de las variables no locales se encuentran buscando en las instancias de registro de activación en la cadena dinámica. A diferencia de la ***Cadena Estática,*** la longitud de la cadena no puede ser determinada estáticamente y además, debido a que se resuelve todo en ejecución, la *IRA* debe tener almacenada el nombre de las variables. Véase en el Ejemplo:
 
 <span class="centerImg"> ![[LP-acc-prof-ej1.png]] </span>
 
 >[!note] Nota
 >En este caso al ser dinámico todos los padres de los subprogramas son los subprogramas que lo llamaron, esto significa que la búsqueda de las entidades bajando los sucesivas instancias de registro de activación hasta encontrarse con la entidad que necesita para la ejecución.
 
-- **Acceso Superficial**: En nombre de las variables no están almacenadas en las instancias de registro de activación de la unidad, sino que en una estructura auxiliar, hay dos métodos para esto:
+#### Acceso Superficial
+
+En nombre de las variables no están almacenadas en las instancias de registro de activación de la unidad, sino que en una estructura auxiliar, hay dos métodos para esto:
 	1. Crear una pila para cada nombre de variable, lo cual es muy costoso.
 	2. Crear una tabla central, en donde exista una entrada para cada nombre de variable, Lo que es mucho más rápido.
 
